--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^2.1",
+        "nesbot/carbon": "^2.34",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
@@ -63,6 +64,7 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.18"
+        "symfony/maker-bundle": "^1.18",
+        "symfony/profiler-pack": "^1.0"
     }
 }
