--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -7,3 +7,6 @@ vich_uploader:
             upload_destination: '%kernel.project_dir%/public/media'
             # Will rename uploaded files using a uniqueid as a prefix.
             namer: Vich\UploaderBundle\Naming\OrignameNamer
+                inject_on_load: false
+                    delete_on_update: true
+                    delete_on_remove: true
