--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,13 @@ security:
         check_path: app_login
         username_path: email
         password_path: password
+      guard:
+          authenticators:
+              - App\Security\LoginFormAuthenticator
+      logout:
+          path: app_logout
+          # where to redirect after logout
+          # target: app_any_route
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#firewalls-authentication
