--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,7 +12,7 @@ security:
     # used to reload user from session & other features (e.g. switch_user)
   firewalls:
     dev:
-      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      pattern: ^/(_(profiler|wdt)|css|img|js)/
       security: false
     main:
       anonymous: true
@@ -39,5 +39,5 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-  # - { path: ^/admin, roles: ROLE_ADMIN }
+   - { path: ^/admin, roles: ROLE_ADMIN }
   # - { path: ^/profile, roles: ROLE_USER }
