--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
         "easycorp/easyadmin-bundle": "^2.3",
+        "knplabs/knp-paginator-bundle": "^5.2",
+        "ocramius/package-versions": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
