--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    media: '%kernel.project_dir%/public/media'
+    media: '/media'
+    media_Public: '%kernel.project_dir%/media'
 services:
     # default configuration for services in *this* file
     _defaults:
